--- a/plugin.xml
+++ b/plugin.xml
@@ -15,7 +15,7 @@
                 <param name="ios-package" value="mp3player" />
             </feature>
         </config-file>
-        <source-file src="src/ios/mp3player.swift" />
+        <source-file src="src/ios/mp3player.m" />
     </platform>
 
     <platform name="android">
